@@ -1,5 +1,8 @@
-package com.gentics.mesh.rest;
+package com.gentics.mesh;
 
+/**
+ * Enum which defines all REST API Versions and the base path for each of them.
+ */
 public enum RestAPIVersion {
     V1("/api/v1"),
     V2("/api/v2");
