@@ -1,7 +1,7 @@
 package com.gentics.mesh.plugin.env;
 
 import com.gentics.mesh.etc.config.MeshOptions;
-import com.gentics.mesh.rest.RestAPIVersion;
+import com.gentics.mesh.RestAPIVersion;
 import com.gentics.mesh.rest.client.MeshRestClient;
 
 import io.vertx.core.Vertx;
@@ -13,35 +13,38 @@ public interface PluginEnvironment {
 
 	/**
 	 * Return an admin API token.
-	 * 
+	 *
 	 * @return
 	 */
 	String adminToken();
 
 	/**
 	 * Return the Vert.x instance to be used for the plugin.
-	 * 
+	 *
 	 * @return
 	 */
 	Vertx vertx();
 
 	/**
 	 * Create a new admin client with api version 1.
-	 * 
-	 * @return
+	 *
+	 * @return A new MeshRestClient instance with the Admin Access Token set in the API version v1
 	 */
 	MeshRestClient createAdminClient();
 
 	/**
-	 * Creates a new admin client from the specified version.
-	 * 
-	 * @return
+	 * Creates a new admin client for the specified version.
+	 *
+	 * @param version
+	 * 		The version which the newly created client should interact with
+	 *
+	 * @return A new MeshRestClient instance with the Admin Access Token set in the specified API version
 	 */
 	MeshRestClient createAdminClient(RestAPIVersion version);
 
 	/**
 	 * Return the Mesh options.
-	 * 
+	 *
 	 * @return
 	 */
 	MeshOptions options();
